Adapt the example builder for the mvp dataset

--- a/mvp_dataset/CITATIONS.bib
+++ b/mvp_dataset/CITATIONS.bib
@@ -1,1 +1,6 @@
-// TODO(example_dataset): BibTeX citation
+@InProceedings{Radosavovic2022,
+  title = {Real-World Robot Learning with Masked Visual Pre-training},
+  author = {Ilija Radosavovic and Tete Xiao and Stephen James and Pieter Abbeel and Jitendra Malik and Trevor Darrell},
+  booktitle = {CoRL},
+  year = {2022}
+}
