--- a/rpt_dataset/CITATIONS.bib
+++ b/rpt_dataset/CITATIONS.bib
@@ -1,1 +1,6 @@
-// TODO(example_dataset): BibTeX citation
+@article{Radosavovic2023,
+  title={Robot Learning with Sensorimotor Pre-training},
+  author={Ilija Radosavovic and Baifeng Shi and Letian Fu and Ken Goldberg and Trevor Darrell and Jitendra Malik},
+  year={2023},
+  journal={arXiv:2306.10007}
+}
